k8s/overlays/dev/patches/ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"   # Pas de TLS en dev
spec:
  rules:
    - host: portfolio-dev.local     # /etc/hosts → IP du cluster dev
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: portfolio-backend
                port:
                  number: 80
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: portfolio-frontend
                port:
                  number: 80
